--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -1,5 +1,5 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Test and Deploy
+run-name: Test and Deploy
 on: [push]
 jobs:
   pre-deploy-checks:
@@ -9,4 +9,5 @@ jobs:
       - name: install dependencies
         run: pip install -r ./cdk-app/requirements-dev.txt
       - name: Run Tests
-        run: pytest ./cdk-app/
+        run: pytest .
+        working-directory: ./cdk-app/
