--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -5,57 +5,56 @@ jobs:
   pre-deploy-checks:
     env:
       DEPLOY_ENV: dev
-      REGION: eu-central-1
+      REGION: ${{ variables.DEV_REGION }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: install dependencies
         run: pip install -r ./cdk-app/requirements-dev.txt
       - name: Run Tests
-        run: pytest .
-        working-directory: ./cdk-app/
-      - name: Run CDK Synth
-        run: cdk synth
+        run: |
+        pytest .
+        echo $REGION
         working-directory: ./cdk-app/
 
   deploy-to-dev:
     runs-on: ubuntu-latest
     env:
       DEPLOY_ENV: dev
-      ACCOUNT: 700433791282
-      REGION: us-west-2
+      ACCOUNT: ${{ variables.AWS_ACCESS_KEY }}
+      REGION: ${{ variables.DEV_REGION }}
     steps:
       - uses: actions/checkout@master
       - name: install dependencies
         run: pip install -r ./cdk-app/requirements-dev.txt
-      - name: Run CDK Synth
-        run: cdk synth
-        working-directory: ./cdk-app/
+      # - name: Run CDK Synth
+      #   run: cdk synth
+      #   working-directory: ./cdk-app/
 
   deploy-to-staging:
     runs-on: ubuntu-latest
     env:
       DEPLOY_ENV: staging
       ACCOUNT: 700433791282
-      REGION: eu-central-1
+      REGION: ${{ variables.STAGING_REGION }}
     steps:
       - uses: actions/checkout@master
       - name: install dependencies
         run: pip install -r ./cdk-app/requirements-dev.txt
-      - name: Run CDK Synth
-        run: cdk synth
-        working-directory: ./cdk-app/
+      # - name: Run CDK Synth
+      #   run: cdk synth
+      #   working-directory: ./cdk-app/
 
   deploy-to-prod:
     runs-on: ubuntu-latest
     env:
       DEPLOY_ENV: prod
       ACCOUNT: 700433791282
-      REGION: ap-south-1
+      REGION: ${{ variables.PROD_REGION }}
     steps:
       - uses: actions/checkout@master
       - name: install dependencies
         run: pip install -r ./cdk-app/requirements-dev.txt
-      - name: Run CDK Synth
-        run: cdk synth
-        working-directory: ./cdk-app/
+      # - name: Run CDK Synth
+      #   run: cdk synth
+      #   working-directory: ./cdk-app/
