--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -26,12 +26,22 @@ jobs:
       ACCOUNT: 700433791282
       REGION: ${{vars.DEV_REGION }}
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - uses: actions/setup-node@master
+        with:
+          node-version: "16"
+      - name: Configure aws credentials
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: 'us-west-2'
       - name: install dependencies
         run: pip install -r ./cdk-app/requirements-dev.txt
-      # - name: Run CDK Synth
-      #   run: cdk synth
-      #   working-directory: ./cdk-app/
+      - name: Run CDK Synth
+        run: cdk synth
+        working-directory: ./cdk-app/
 
   deploy-to-staging:
     if: github.ref == 'refs/heads/demo'
