--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -2,6 +2,34 @@ name: Test and Deploy
 run-name: Test and Deploy
 on: [push]
 jobs:
+  predeploy-setup:
+    runs-on: ubuntu-latest
+    env:
+      DEPLOY_ENV: dev
+      REGION: ${{vars.DEV_REGION }}
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+      - name: Install Python dependencies and CDK
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./cdk-app/requirements-dev.txt
+          npm install -g aws-cdk
+      - name: Configure aws credentials
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{vars.DEV_REGION }}
+
   pre-deploy-checks:
     env:
       DEPLOY_ENV: dev
@@ -28,25 +56,25 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16"
-      - name: Install Python dependencies and CDK
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r ./cdk-app/requirements-dev.txt
-          npm install -g aws-cdk
-      - name: Configure aws credentials
-        uses: aws-actions/configure-aws-credentials@master
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: ${{vars.DEV_REGION }}
+      # - name: Set up Python 3.10
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: "3.10"
+      # - name: Set up Node
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: "16"
+      # - name: Install Python dependencies and CDK
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r ./cdk-app/requirements-dev.txt
+      #     npm install -g aws-cdk
+      # - name: Configure aws credentials
+      #   uses: aws-actions/configure-aws-credentials@master
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+      #     aws-region: ${{vars.DEV_REGION }}
       - name: Run CDK Synth
         run: cdk synth
         working-directory: ./cdk-app/
