--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: Install Python dependencies and CDK
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./cdk-app/requirements-dev.txt
+          pip install -r ./cdk-app/requirements.txt
           npm install -g aws-cdk
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@master
@@ -89,7 +89,7 @@ jobs:
       - name: Install Python dependencies and CDK
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./cdk-app/requirements-dev.txt
+          pip install -r ./cdk-app/requirements.txt
           npm install -g aws-cdk
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@master
@@ -100,6 +100,9 @@ jobs:
       - name: Run CDK Synth
         run: cdk synth
         working-directory: ./cdk-app/
+      - name: Deploy to AWS
+        run: cdk deploy  --require-approval=never
+        working-directory: ./cdk-app/ 
 
   deploy-to-prod:
     if: github.ref == 'refs/heads/prod'
@@ -123,7 +126,7 @@ jobs:
       - name: Install Python dependencies and CDK
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./cdk-app/requirements-dev.txt
+          pip install -r ./cdk-app/requirements.txt
           npm install -g aws-cdk
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@master
@@ -134,3 +137,6 @@ jobs:
       - name: Run CDK Synth
         run: cdk synth
         working-directory: ./cdk-app/
+      - name: Deploy to AWS
+        run: cdk deploy  --require-approval=never
+        working-directory: ./cdk-app/ 
