--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -87,6 +87,7 @@ jobs:
       ACCOUNT: ${{ vars.ACCOUNT_ID }}
       REGION: ${{ matrix.array.region }}
     name:  ${{ matrix.array.name }}
+    steps:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Set up Python 3.10
