--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -34,7 +34,7 @@ jobs:
     needs: pre-deploy-checks
     runs-on: ubuntu-latest
     environment: 
-      prod-env
+      name: prod-env
     strategy:
       matrix:
         array: [
