--- a/cdk-app/.pylintrc
+++ b/cdk-app/.pylintrc
@@ -192,6 +192,7 @@ good-names=i,
            k,
            ex,
            Run,
+           f
            _
 
 # Good variable names regexes, separated by a comma. If names match any regex,
@@ -430,7 +431,8 @@ disable=raw-checker-failed,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
-        use-symbolic-message-instead
+        use-symbolic-message-instead,
+        R0903
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
