--- a/tox.ini
+++ b/tox.ini
@@ -5,18 +5,19 @@ envlist =
 setenv = 
     DEPLOY_ENV = dev
     REGION = 'us-west-2'
+    ACCOUNT = '123456787890'
 deps = 
    -r requirements-dev.txt
 commands = 
     pytest ./
 [testenv:pylint]
 deps = 
-    pylint
+    -r requirements-dev.txt
 commands = 
     pylint --recursive=y ./
 
 [testenv:flake8]
 deps = 
-    flake8
+    -r requirements-dev.txt
 commands = 
     flake8 ./
