env variable missing

--- a/.github/workflows/deploy-to-aws.yaml
+++ b/.github/workflows/deploy-to-aws.yaml
@@ -6,6 +6,7 @@ jobs:
     env:
       DEPLOY_ENV: dev
       REGION: ${{vars.DEV_REGION }}
+      ACCOUNT: ${{ vars.ACCOUNT_ID }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
